Fixed IE8 Bug - z-index for divs in ContainerFieldset AND select

--- a/Kwf_js/FrontendForm/FieldSet.css
+++ b/Kwf_js/FrontendForm/FieldSet.css
@@ -17,6 +17,11 @@
     z-index: 1;
 }
 
+.kwfFormContainerFieldSet fieldset .kwfField select {
+    position: relative;
+    z-index: 1;
+}
+
 .kwfFormContainerFieldSet .kwfFormContainerFieldSetCollapsed div {
     display: none;
 }
